# zodl-language-bindings

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml  zcash_uri.pyi  zcash_zip321.pyi
.github/workflows/: CI.yml
src/: lib.rs
tests/: test_address.py  test_errors.py  test_generate.py  test_parse.py  test_roundtrip.py  test_utils.py
zcash_uri/: __init__.py
zcash_uri/libzcash_uri.dylib.dSYM/Contents/: Info.plist
zcash_uri/libzcash_uri.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libzcash_uri.dylib.yml
zcash_uri/libzcash_zip321.dylib.dSYM/Contents/: Info.plist
zcash_zip321/: __init__.py
zcash_zip321/libzcash_zip321.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libzcash_zip321.dylib.yml
