[package]
name = "zcash-uri"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Python bindings for Zcash ZIP-321 payment request URIs"
repository = "https://github.com/Chay2203/zodl-language-bindings"

[lib]
name = "zcash_uri"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
zip321 = "0.6"
zcash_address = "0.10"
zcash_protocol = { version = "0.7", features = ["std"] }
